# sdk-demos

./: .gitignore  .pylintrc  LICENSE  README.md
.github/workflows/: main.yml
ai_model/: README.md  demo.py  draw_chunkdata.py
calibration/: README.md  calibration.yaml  demo.py
calibrator/: Dockerfile  README.md  bundle.bat  calibrator.rc  calibrator.ui  env.bat  gcovr.cfg  meson.build  requirements.txt  test.sh
calibrator/inc/gev/: pipeline.hpp  util.hpp
calibrator/inc/io/: data_thread.hpp  util.hpp
calibrator/inc/ui/: MainWindow.hpp  cameraview.hpp  features.hpp  parameterwidget.hpp
calibrator/src/: calibrator.cc  meson.build
calibrator/src/gev/: pipeline.cc  util.cc
calibrator/src/io/: data_thread.cc  util.cc
calibrator/src/ui/: cameraview.cc  features.cc  parameterwidget.cc
calibrator/test/: device.cc  meson.build  mock_device.cc  mock_device.hpp  test_device.cc  test_device.hpp  test_io_util.cc  test_io_util.hpp  test_parameters.cc  test_parameters.hpp  test_pipeline.cc  test_pipeline.hpp  util.cc  util.hpp
calibrator/win/: install_oss.bat  qwtconfig.pri
common/: chunk_parser.py  connection.py
descriptors/: README.md  demo.py  draw_chunkdata.py
disparity/: README.md  demo.py
distribution/: README.md  build.bat  install.nsi  install.spec  make_install.bat  requirements.txt  setup.py  version.j2
driver/: README.md  build.bat  driver.cc  setup.py
edl/: README.md  edl.py
focus/: README.md  demo.py
keypoints/: README.md  demo.py  draw_chunkdata.py
parameters/: README.md  demo.py
sparse3d/: README.md  demo.py
stereo_matches/: README.md  demo.py  draw_chunkdata.py
stereo_viewer/: README.md  bundle.bat  env.bat  meson.build  meson_options.txt  resources.qrc  stereo_viewer.rc  stereo_viewer.ui
stereo_viewer/inc/: bottlenose_chunk_parser.hpp  focus.hpp
stereo_viewer/inc/gev/: calib_params.hpp  pipeline.hpp  stereo_rig.hpp  util.hpp
stereo_viewer/inc/io/: calib.hpp  data_thread.hpp  file_uploader.hpp  util.hpp
stereo_viewer/inc/ui/: MainWindow.hpp  cameraview.hpp
stereo_viewer/src/: bottlenose_chunk_parser.cc  focus.cc  meson.build  viewer.cc
stereo_viewer/src/gev/: calib_params.cc  pipeline.cc  stereo_rig.cc  util.cc
stereo_viewer/src/io/: calib.cc  data_thread.cc  file_uploader.cc
stereo_viewer/src/ui/: cameraview.cc
stereo_viewer/subprojects/: yaml-cpp.wrap
stream/: README.md  chunk_parser.py  requirements.txt  stream.py
utility/: .gitignore  README.md  build.bat  build.sh  calibration.py  filemanager.ui  requirements.txt  resources.qrc  uploader.py  utility.py
utility/img/: icon_template.xcf
